--- a/projects.html
+++ b/projects.html
@@ -326,8 +326,27 @@ h1 {
             <br>
             <div style="text-align: center; width: fit-content; margin: auto;">
                 <div class="projectlist">
+                    <div class="proimage" onclick="redirectToMythoflumi()">
+                        <img src="art/mythoflumi/douglaugh.MOV" alt="lumi" class="codepic">
+                        <div class="overlay1">
+                            <div class="textc">
+                                <span style="font-weight: 300; font-size: 30px;">Myth of Lumi 2025</span><br>
+                                <hr>
+                                <button class="tag" style="background-color: #65c2eb">3D Animation</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
+                                <button class="tag" style="background-color: #0889c9">Graphic Design</button>
+                                <button class="tag" style="background-color: #0889c9">2D Art</button><br>
+                                <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                    <li>Team size: 40</li>
+                                    <li>Rig and animate characters</li>
+                                    <li>Graphic designs for props</li>
+                                    <li>Mixamo motion capture animation clean up</li>
+                                </ul><br>
+                            </div>
+                        </div>
+                    </div>
                     <div class="proimage" onclick="redirectToThewindandthewisp()">
-                        <img src="art/thewindandthewisp/zinnia.gif" alt="thewingandthewisp" class="codepic">
+                        <img src="art/thewindandthewisp/lilyofthevalley.gif" alt="thewingandthewisp" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 24px;">The Wind and The Wisp 2025</span><br>
@@ -403,6 +422,15 @@ h1 {
                             </div>
                         </div>
                     </div>
+                    <div class="proimage" style="cursor: default;">
+                        <!-- <img src="placeholder.jpg" alt="littledream" class="codepic"> -->
+                    </div>
+                    <div class="proimage" style="cursor: default;">
+                        <!-- <img src="placeholder.jpg" alt="littledream" class="codepic"> -->
+                    </div>
+                    <div class="proimage" style="cursor: default;">
+                        <!-- <img src="placeholder.jpg" alt="littledream" class="codepic"> -->
+                    </div>
                 </div>
             </div>
         </section>
@@ -423,6 +451,10 @@ h1 {
     
             function redirectToContacts() {
                 window.location.href = 'contacts.html'
+            }
+
+            function redirectToMythoflumi(){
+                window.location.href = 'mythoflumi.html'
             }
 
             function redirectToThewindandthewisp() {
