--- a/thewindandthewisp.html
+++ b/thewindandthewisp.html
@@ -343,7 +343,12 @@ button.tag {
             <img src="art/thewindandthewisp/petunia.jpg" class="thumbnail" onclick="openPopup('art/thewindandthewisp/petunia.jpg')">
             <img src="art/thewindandthewisp/zinnia.jpg" class="thumbnail" onclick="openPopup('art/thewindandthewisp/zinnia.jpg')">
         </div>
-        <!-- <h3>Wisp animations:</h3> -->
+        <!-- <h3>LilBuddy model, rig, animations:</h3> -->
+        <h3>Wisp animations:</h3>
+        <div>
+            <img src="art/thewindandthewisp/wispbye.mp4" class="thumbnail" onclick="openPopup('art/thewindandthewisp/wispbye.mp4')">
+            <img src="art/thewindandthewisp/wispcome.mp4" class="thumbnail" onclick="openPopup('art/thewindandthewisp/wispcome.mp4')">
+        </div>
 
         <br><br><br><br><br><br>
 
@@ -387,7 +392,9 @@ button.tag {
             'art/thewindandthewisp/forgetmenot.jpg',
             'art/thewindandthewisp/lilyofthevalley.jpg',
             'art/thewindandthewisp/petunia.jpg',
-            'art/thewindandthewisp/zinnia.jpg'
+            'art/thewindandthewisp/zinnia.jpg',
+            'art/thewindandthewisp/wispbye.mp4',
+            'art/thewindandthewisp/wispcome.mp4',
         ];
 
         var currentIndex = 0;
