--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
     <h2>Hi, I’m Dora! Here’s a collection of my rigging and animation work...</h2>
     <section id="game-art" class="gallery">
         <div class="gallery-grid">
-            <div class="gallery-item" onclick="openPopup('art/centar.MOV')">
-                <img src="art/centar.MOV" alt="Game Art 2">
+            <div class="gallery-item" onclick="openPopup('art/centar.gif')">
+                <img src="art/centar.gif" alt="Game Art 2">
                 <div class="gallery-overlay">Centaur Rig Showcase</div>
             </div>
             <div class="gallery-item" onclick="openPopup('art/thewindandthewisp/zinnia.gif')">
@@ -370,8 +370,8 @@
                 <img src="art/bow.gif" alt="Game Art 1">
                 <div class="gallery-overlay">Bow Tie Animation</div>
             </div>
-            <div class="gallery-item" onclick="openPopup('art/mythoflumi/douglaugh.MOV')">
-                <img src="art/mythoflumi/douglaugh.MOV" alt="Game Art 1">
+            <div class="gallery-item" onclick="openPopup('art/mythoflumi/douglaugh.gif')">
+                <img src="art/mythoflumi/douglaugh.gif" alt="Game Art 1">
                 <div class="gallery-overlay">Laughing Character Animation</div>
             </div>
             <div class="gallery-item" onclick="openPopup('art/thewindandthewisp/lilbuddyfall.gif')">
@@ -382,8 +382,8 @@
                 <img src="art/flower.gif" alt="Game Art 1">
                 <div class="gallery-overlay">Petals Falling Animation</div>
             </div>
-            <div class="gallery-item" onclick="openPopup('art/mythoflumi/audience3.MOV')">
-                <img src="art/mythoflumi/audience3.MOV" alt="Game Art 2">
+            <div class="gallery-item" onclick="openPopup('art/mythoflumi/audience3.gif')">
+                <img src="art/mythoflumi/audience3.gif" alt="Game Art 2">
                 <div class="gallery-overlay">Mocap Cleanup</div>
             </div>
         </div>
@@ -418,14 +418,14 @@
         }
 
         var images = [
-            'art/centar.MOV',
+            'art/centar.gif',
             'art/thewindandthewisp/zinnia.gif',
             'art/mythoflumi/lumi.gif',
             'art/bow.gif',
-            'art/mythoflumi/douglaugh.MOV',
+            'art/mythoflumi/douglaugh.gif',
             'art/thewindandthewisp/lilbuddyfall.gif',
             'art/flower.gif',
-            'art/mythoflumi/audience3.MOV'
+            'art/mythoflumi/audience3.gif'
         ];
 
         var currentIndex = 0;
