--- a/projects.html
+++ b/projects.html
@@ -327,7 +327,7 @@ h1 {
             <div style="text-align: center; width: fit-content; margin: auto;">
                 <div class="projectlist">
                     <div class="proimage" onclick="redirectToMythoflumi()">
-                        <img src="art/mythoflumi/douglaugh.MOV" alt="lumi" class="codepic">
+                        <img src="art/mythoflumi/douglaugh.gif" alt="lumi" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 30px;">Myth of Lumi 2025</span><br>
