--- a/mythoflumi.html
+++ b/mythoflumi.html
@@ -327,9 +327,9 @@ button.tag {
         </div>
         <h3>Mixamo animation cleanup:</h3>
         <div>
-            <img src="art/mythoflumi/audience1.MOV" class="thumbnail" onclick="openPopup('art/mythoflumi/audience1.MOV')">
-            <img src="art/mythoflumi/audience2.MOV" class="thumbnail" onclick="openPopup('aart/mythoflumi/audience2.MOV')">
-            <img src="art/mythoflumi/audience3.MOV" class="thumbnail" onclick="openPopup('art/mythoflumi/AudienceMaleCheer.MOV')">
+            <img src="art/mythoflumi/audience1.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/audience1.gif')">
+            <img src="art/mythoflumi/audience2.gif" class="thumbnail" onclick="openPopup('aart/mythoflumi/audience2.gif')">
+            <img src="art/mythoflumi/audience3.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/AudienceMaleCheer.gif')">
         </div>
 
         <br><br><br><br><br><br>
@@ -364,9 +364,9 @@ button.tag {
 
         var images = [
             'art/mythoflumi/cardback.jpg',
-            'art/mythoflumi/audience1.MOV',
-            'art/mythoflumi/audience2.MOV',
-            'art/mythoflumi/audience3.MOV',
+            'art/mythoflumi/audience1.gif',
+            'art/mythoflumi/audience2.gif',
+            'art/mythoflumi/audience3.gif',
         ];
 
         var currentIndex = 0;
