--- a/thewindandthewisp.html
+++ b/thewindandthewisp.html
@@ -346,8 +346,8 @@ button.tag {
         <!-- <h3>LilBuddy model, rig, animations:</h3> -->
         <h3>Wisp animations:</h3>
         <div>
-            <img src="art/thewindandthewisp/wispbye.mp4" class="thumbnail" onclick="openPopup('art/thewindandthewisp/wispbye.mp4')">
-            <img src="art/thewindandthewisp/wispcome.mp4" class="thumbnail" onclick="openPopup('art/thewindandthewisp/wispcome.mp4')">
+            <img src="art/thewindandthewisp/wispbye.gif" class="thumbnail" onclick="openPopup('art/thewindandthewisp/wispbye.gif')">
+            <img src="art/thewindandthewisp/wispcome.gif" class="thumbnail" onclick="openPopup('art/thewindandthewisp/wispcome.gifs')">
         </div>
 
         <br><br><br><br><br><br>
@@ -393,8 +393,8 @@ button.tag {
             'art/thewindandthewisp/lilyofthevalley.jpg',
             'art/thewindandthewisp/petunia.jpg',
             'art/thewindandthewisp/zinnia.jpg',
-            'art/thewindandthewisp/wispbye.mp4',
-            'art/thewindandthewisp/wispcome.mp4',
+            'art/thewindandthewisp/wispbye.gif',
+            'art/thewindandthewisp/wispcome.gif',
         ];
 
         var currentIndex = 0;
