--- a/art.html
+++ b/art.html
@@ -371,7 +371,7 @@ h2 {
         <div class="gallery-grid">
             <div class="gallery-item" onclick="openPopup('art/rose.png')">
                 <img src="art/rose.png" alt="Game Art 2">
-                <div class="gallery-overlay">Rose Model <br>– Drift</div>
+                <div class="gallery-overlay">Rose Model <br>– Shift</div>
             </div>
             <div class="gallery-item" onclick="openPopup('art/chair.jpg')">
                 <img src="art/chair.jpg" alt="Game Art 1">
