--- a/contacts.html
+++ b/contacts.html
@@ -197,7 +197,7 @@ button.tag {
     letter-spacing: 0.05em;
     line-height: 1.5;
     max-width: 500px;
-    min-width:390px;
+    /* min-width:390px; */
     height: 450px;
     text-align: left;
     margin: auto 20px;
