--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     </header>
     <hr style="height: 8px; background-color: #a9d5ee; border: none; padding-top: 0px; margin: 0;">
 
-    <h2>Hi, I’m Dora! Here’s a collection of my rigging and animation work...</h2>
+    <h2 style="margin: 0 10%; margin-top: 20px;">Hi, I’m Dora! Here’s a collection of my rigging and animation work...</h2>
     <section id="game-art" class="gallery">
         <div class="gallery-grid">
             <div class="gallery-item" onclick="openPopup('art/centar.gif')">
