--- a/mythoflumi.html
+++ b/mythoflumi.html
@@ -324,6 +324,22 @@ button.tag {
         <h3>Prop graphic designs:</h3>
         <div>
             <img src="art/mythoflumi/cardback.jpg" class="thumbnail" onclick="openPopup('art/mythoflumi/cardback.jpg')">
+            <img src="art/mythoflumi/bookcover.jpg" class="thumbnail" onclick="openPopup('art/mythoflumi/bookcover.jpg')">
+        </div>
+        <h3>First person hand animation:</h3>
+        <div>
+            <img src="art/mythoflumi/hand.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/hand.gif')">
+            <img src="art/mythoflumi/cardistry.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/cardistry.gif')">
+        </div>
+        <h3>Enemy animations:</h3>
+        <div>
+            <img src="art/mythoflumi/douglaugh.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/douglaugh.gif')">
+            <img src="art/mythoflumi/dougfrustred.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/dougfrustred.gif')">
+            <img src="art/mythoflumi/dougsurprised.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/dougsurprised.gif')">
+        </div>
+        <div>
+            <img src="art/mythoflumi/dougwin.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/dougwin.gif')">
+            <img src="art/mythoflumi/douglose.gif" class="thumbnail" onclick="openPopup('art/mythoflumi/douglose.gif')">
         </div>
         <h3>Mixamo animation cleanup:</h3>
         <div>
@@ -364,6 +380,14 @@ button.tag {
 
         var images = [
             'art/mythoflumi/cardback.jpg',
+            'art/mythoflumi/bookcover.jpg',
+            'art/mythoflumi/hand.gif',
+            'art/mythoflumi/cardistry.gif',
+            'art/mythoflumi/douglaugh.gif',
+            'art/mythoflumi/dougfrustred.gif',
+            'art/mythoflumi/dougsurprised.gif',
+            'art/mythoflumi/dougwin.gif',
+            'art/mythoflumi/douglose.gif',
             'art/mythoflumi/audience1.gif',
             'art/mythoflumi/audience2.gif',
             'art/mythoflumi/audience3.gif',
