--- a/thewindandthewisp.html
+++ b/thewindandthewisp.html
@@ -343,7 +343,16 @@ button.tag {
             <img src="art/thewindandthewisp/petunia.jpg" class="thumbnail" onclick="openPopup('art/thewindandthewisp/petunia.jpg')">
             <img src="art/thewindandthewisp/zinnia.jpg" class="thumbnail" onclick="openPopup('art/thewindandthewisp/zinnia.jpg')">
         </div>
-        <!-- <h3>LilBuddy model, rig, animations:</h3> -->
+        <h3>LilBuddy model, rig, animations:</h3>
+        <div>
+            <img src="art/thewindandthewisp/lilbuddy.jpg" class="thumbnail" onclick="openPopup('art/thewindandthewisp/lilbuddy.jpg')">
+            <img src="art/thewindandthewisp/lilbuddyidle.gif" class="thumbnail" onclick="openPopup('art/thewindandthewisp/lilbuddyidle.gif')">
+            <img src="art/thewindandthewisp/lilbuddyflap.gif" class="thumbnail" onclick="openPopup('art/thewindandthewisp/lilbuddyflap.gif')">
+        </div>
+        <div>
+            <img src="art/thewindandthewisp/lilbuddyfall.gif" class="thumbnail" onclick="openPopup('art/thewindandthewisp/lilbuddyfall.gif')">
+            <img src="art/thewindandthewisp/lilbuddyhop.gif" class="thumbnail" onclick="openPopup('art/thewindandthewisp/lilbuddyhop.gif')">
+        </div>
         <h3>Wisp animations:</h3>
         <div>
             <img src="art/thewindandthewisp/wispbye.gif" class="thumbnail" onclick="openPopup('art/thewindandthewisp/wispbye.gif')">
@@ -393,6 +402,11 @@ button.tag {
             'art/thewindandthewisp/lilyofthevalley.jpg',
             'art/thewindandthewisp/petunia.jpg',
             'art/thewindandthewisp/zinnia.jpg',
+            'art/thewindandthewisp/lilbuddy.jpg',
+            'art/thewindandthewisp/lilbuddyidle.gif',
+            'art/thewindandthewisp/lilbuddyflap.gif',
+            'art/thewindandthewisp/lilbuddyfall.gif',
+            'art/thewindandthewisp/lilbuddyhop.gif',
             'art/thewindandthewisp/wispbye.gif',
             'art/thewindandthewisp/wispcome.gif',
         ];
