--- a/pigandchikin.html
+++ b/pigandchikin.html
@@ -319,7 +319,7 @@ button.tag {
             <div style="width: fit-content; margin: auto;">
                 <div style="display: flex;">
                     <div class="bar" style="background-color: #aad5ee; width: 15px"></div>
-                    <a href="https://queburs.itch.io/pig-chikin" target="_blank" rel="noopener noreferrer">
+                    <a href="https://store.steampowered.com/app/3290120/Pig__Chikin/" target="_blank" rel="noopener noreferrer">
                         <button class="nav projectbutton" style="color: #aad5ee; font-size: 18px;">Play</button>
                     </a>
                 </div>
