update code portfolio

--- a/codepros.html
+++ b/codepros.html
@@ -44,6 +44,63 @@
                 <br>
                 <div class="projectlist">
                     <div class="codeimage">
+                        <a href="img_folder/code_img/CG/raytracing.jpg" target="_blank">
+                            <img src="img_folder/code_img/CG/raytracing.jpg" alt="raytracing" class="codepic">
+                            <div class="overlay">
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Ray Tracing</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Computer Graphics</button>
+                                    <br>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Built a CPU ray tracer in C++ with backward ray tracing</li>
+                                        <li>Implemented ray-object intersections, shadows, and Phong shading</li>
+                                        <li>Added diffuse, specular, and ambient lighting with per-pixel color</li>
+                                    </ul><br>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="img_folder/code_img/CG/rollercoaster.mp4" target="_blank">
+                            <img src="img_folder/code_img/CG/rollercoaster.jpg" alt="rollercoaster" class="codepic">
+                            <div class="overlay">
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Simulating a Roller Coaster</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Computer Graphics</button>
+                                    <br>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Built a first-person camera along spline tracks</li>
+                                        <li>Created shaders for texture mapping and Phong lighting</li>
+                                        <li>Modeled track geometry and added environments for realism</li>
+                                    </ul><br>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="heightfield.html" target="_blank">
+                            <img src="img_folder/code_img/CG/HeightField(key4,2).png" alt="HeightField" class="codepic">
+                            <div class="overlay">
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Height Fields Using Shaders</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Computer Graphics</button>
+                                    <br>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Built a terrain renderer in C++ with OpenGL and GLSL</li>
+                                        <li>Visualized heightmaps with point, wireframe, and triangle modes</li>
+                                        <li>Wrote shaders to smooth geometry and adjust height/color</li>
+                                    </ul><br>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="codeimage">
                         <a href="codes/portal/Lab12.html" target="_blank">
                             <img src="img_folder/code_img/portal.jpg" alt="portal" class="codepic">
                             <div class="overlay">
@@ -51,6 +108,8 @@
                                     <span style="font-weight: 300; font-size: 30px;">Portal - 3D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Gameplay</button>
+                                    <button class="tag" style="background-color: #a5d19b">Game AI</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Implemented FPS player movement with mouse-controlled camera and strafing</li>
@@ -70,6 +129,8 @@
                                     <span style="font-weight: 300; font-size: 30px;">Mario Kart - 3D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Gameplay</button>
+                                    <button class="tag" style="background-color: #a5d19b">Game AI</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Implemented linear drag to velocity</li>
@@ -89,6 +150,7 @@
                                     <span style="font-weight: 300; font-size: 27px;">Star Fox Tunnel - 3D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Gameplay</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Learned to use Vector3 for setting up a 3D world and loading levels</li>
@@ -108,6 +170,8 @@
                                     <span style="font-weight: 300; font-size: 30px;">Zelda - 2D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Gameplay</button>
+                                    <button class="tag" style="background-color: #a5d19b">Game AI</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Applied tile mapping techniques</li>
@@ -127,6 +191,7 @@
                                     <span style="font-weight: 300; font-size: 30px;">Pac-Man - 2D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Game AI</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Learned and applied a finite state machine</li>
@@ -146,6 +211,7 @@
                                         <span style="font-weight: 300; font-size: 30px;">Mario - 2D</span><br>
                                         <hr>
                                         <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                        <button class="tag" style="background-color: #a5d19b">Gameplay</button>
                                         <br>
                                         <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                             <li>Implemented gravity and acceleration mechanics</li>
@@ -166,6 +232,7 @@
                                     <span style="font-weight: 300; font-size: 30px;">Frogger - 2D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Gameplay</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Load levels by reading .txt files</li>
@@ -185,6 +252,7 @@
                                     <span style="font-weight: 300; font-size: 30px;">Astroid - 2D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Gameplay</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Implementing actors and components</li>
@@ -204,6 +272,7 @@
                                     <span style="font-weight: 300; font-size: 30px;">Pong - 2D</span><br>
                                     <hr>
                                     <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <button class="tag" style="background-color: #a5d19b">Gameplay</button>
                                     <br>
                                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                         <li>Learned drawing using SDL</li>
