added code pro vid

--- a/codepros.html
+++ b/codepros.html
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                     <div class="codeimage">
-                        <a href="heightfield.html" target="_blank">
+                        <a href="img_folder/code_img/CG/heightfield.mp4" target="_blank">
                             <img src="img_folder/code_img/CG/HeightField(key4,2).png" alt="HeightField" class="codepic">
                             <div class="overlay">
                                 <div class="textc">
